Fixing announcement bar scroll with proper spacing

--- a/app.css
+++ b/app.css
@@ -67,7 +67,7 @@
   }
 
   .body-container {
-    @apply max-w-body md:px-4 px-3 py-2 mx-auto
+    @apply max-w-body md:px-4 px-3 py-3 mx-auto
     /* border-4 xl:border-purple-500 lg:border-emerald-400 md:border-red-500 sm:border-green-600 */
     ;
   }
@@ -108,10 +108,10 @@
 
   /* Button: primary (green) */
   .button-primary {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
+    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
   }
   .button-primary-icon {
-    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 text-xs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-transparent bg-brand-primary-700 text-brand-light rounded-full font-bold hover:bg-brand-primary-800 transition-colors;
     
     & > span {
       @apply w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-primary-700;
@@ -123,10 +123,10 @@
   }
   /* Button: secondary (white) */
   .button-secondary {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
   }
   .button-secondary-icon {
-    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 text-xs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-white text-brand-dark rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
   
     & > span {
       @apply w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light;
@@ -138,10 +138,10 @@
   }
   /* Button: tertiary (white/green) */
   .button-tertiary {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
   }
   .button-tertiary-icon {
-    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 text-xs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-brand-border bg-brand-light text-brand-primary-700 rounded-full font-bold hover:bg-brand-primary-100 transition-colors;
   
     & > span {
       @apply w-7 h-7 flex items-center justify-center bg-brand-primary-700 rounded-full text-brand-light;
@@ -153,10 +153,10 @@
   }
   /* Button: transparent */
   .button-transparent {
-    @apply min-h-10 px-6 py-2 flex items-center justify-center text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
+    @apply min-h-10 px-6 py-2 flex items-center justify-center md:text-xs text-xxs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
   }
   .button-transparent-icon {
-    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 text-xs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
+    @apply min-h-10 pr-2 pl-6 py-1.5 flex items-center justify-between gap-3 md:text-xs text-xxs uppercase tracking-wide border border-brand-light bg-brand-light/10 backdrop-blur-xs text-brand-light rounded-full font-bold hover:bg-brand-light/20 transition-colors;
   
     & > span {
       @apply w-7 h-7 flex items-center justify-center bg-brand-light rounded-full text-brand-dark;
@@ -168,7 +168,7 @@
   }
   /* Button: text + arrow */
   .button-text-icon {
-    @apply inline-flex items-center mt-2 text-xs font-bold uppercase tracking-wide text-brand-primary-700 hover:underline transition-colors;
+    @apply inline-flex items-center mt-2 md:text-xs text-xxs font-bold uppercase tracking-wide text-brand-primary-700 hover:underline transition-colors;
 
     & .icon-arrow {
       @apply w-2.5 h-2.5 rotate-180 ml-2;
@@ -219,6 +219,15 @@
 
 .logo-scroll {
   animation: scroll 20s linear infinite;
+}
+
+.announcement-scroll {
+  animation: scroll 10s linear infinite;
+}
+@media (min-width: 768px) {
+  .announcement-scroll {
+    animation: scroll 28s linear infinite;
+  }
 }
 
 /* PRODUCT CAROUSEL PROGRESS BAR */
